# terraform-aws-s3-to-splunk-upload

./: .gitignore  .gitleaksignore  .tool-versions  Makefile  README.md  pyproject.toml  s3_to_splunk_module_diagram.drawio
.github/workflows/: cicd-1-pull-request.yaml  cicd-2-publish.yaml  stage-2-test.yaml
lambda/reingestion_lambda/: Dataclasses.py  process.drawio  process_body.py  process_message.py  process_message_line.py  reingestion_lambda.py
lambda/s3_to_firehose/: s3_to_firehose.py
lambda/tests/: mock_constants.py
lambda/tests/test_reingestion_lambda/: test_process_body.py  test_process_message.py  test_process_message_line.py  test_reingestion_lambda.py
lambda/tests/test_s3_to_firehose/: test_s3_to_firehose.py
lambda/tests/test_transformation_lambda/: expected_response.json  mock_data_from_s3.json  mock_event.json  mock_processed_data.json  test_reingest.py  test_transformation_lambda.py
lambda/tests/test_utils.py/: test_utils.py
lambda/transformation_lambda/: constants.py  reingest.py  transformation_lambda.py
lambda/utils/: utils.py
scripts/config/: gitleaks.toml  sonar-scanner.properties
scripts/docker/examples/python/assets/hello_world/: requirements.txt
scripts/tests/: coverage.sh  unit.sh
terraform/: .terraform.lock.hcl  cloudwatch.tf  firehose.tf  iam.tf  lambda.tf  locals.tf  s3.tf  variables.tf
terraform/policies/: audit-log-bucket.json  audit-log-firehose.json  audit-log-lambda.json  lambda-invoke.json
