[tool.poetry]
name = "s3_to_firehose"
version = "0.1.0"
description = ""
authors = ["Jacob Gill <jacob.gill1@nhs.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.29.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"
pytest-cov = "^4.0.0"
boto3 = "^1.29.3"
black = "^23.1.0"
pytest-mock = "^3.11.1"
botocore = "^1.29.159"
moto = {extras = ["firehose", "s3"], version = "^4.1.12"}

[tool.coverage.run]
omit = ["lambda/tests/**"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"